--- a/public/audience.html
+++ b/public/audience.html
@@ -30,6 +30,13 @@
     <video id="local-video" autoplay muted></video>
     <p>Your camera feed is now being shown on the main screen.</p>
   </div>
+  
+  <div id="stream-ended-screen" class="hidden">
+    <h1>Stream Ended</h1>
+    <p>Your stream has been ended by the production team.</p>
+    <p>Thank you for participating!</p>
+    <button id="return-btn">Return to Code Screen</button>
+  </div>
 
   <script src="audience.js"></script>
 </body>
