--- a/public/audience.html
+++ b/public/audience.html
@@ -26,16 +26,18 @@
   </div>
   
   <div id="streaming-screen" class="hidden">
+    <div class="live-indicator">LIVE</div>
     <h1>You're Live!</h1>
     <video id="local-video" autoplay muted></video>
     <p>Your camera feed is now being shown on the main screen.</p>
   </div>
   
-  <div id="stream-ended-screen" class="hidden">
-    <h1>Stream Ended</h1>
-    <p>Your stream has been ended by the production team.</p>
-    <p>Thank you for participating!</p>
-    <button id="return-btn">Return to Code Screen</button>
+  
+  <div id="streaming-screen" class="hidden">
+    <div class="live-indicator">LIVE</div>
+    <h1>You're Live!</h1>
+    <video id="local-video" autoplay muted></video>
+    <p>Your camera feed is now being shown on the main screen.</p>
   </div>
 
   <script src="audience.js"></script>
